Fixed City z-index

--- a/src/index.css
+++ b/src/index.css
@@ -143,33 +143,33 @@
 }
 
 .stars-3 { 
-  z-index: 1;
+  z-index: 1px;
 }
 
 .stars-2 { 
-  z-index: 2;
+  z-index: 2px;
 }
 
 .stars-1 { 
-  z-index: 3;
+  z-index: 3px;
 }
 
 .city-moon {
-  z-index: 4;
+  z-index: 4px;
   margin-left: 33%;
 }
 
 .city-bg {
-  z-index: 5;
+  z-index: 2px;
 }
 
 .city-grd {
-  z-index: 6;
+  z-index: 6px;
   margin-top: 5%;
 }
 
 .city-fg {
-  z-index: 7;
+  z-index: 7px;
   margin-top: 5%;
 }
 
